--- a/src/styles/Blog.module.css
+++ b/src/styles/Blog.module.css
@@ -1,14 +1,17 @@
 .main {
-    min-height: 100vh; 
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    justify-content: flex-start;
-      padding-top: 3rem;
-  }
+  min-height: 100vh; 
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
+    padding-top: 3rem;
+}
 
 .blogItemh3{
-    cursor: pointer;
+  cursor: pointer;
+}
+.blogItemp{
+  max-width: 45vw;
 }
