--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -5,8 +5,34 @@
 
 .mb3{
     margin-bottom: 21px;
+    display: flex;
+    flex-direction: column;
 }
 
-.formlabel{
-    margin: 0px 14px;
+
+.input{
+    padding: 3px;
+    font-size: 18px;
+    border-radius: 4px;
+    border: 1px solid black;
 }
+
+.formlabel{ 
+    padding: 7px 0;
+}
+
+.formtext{
+    font-size: 11px;
+    color: grey;
+    padding: 5px 4px;
+}
+
+.btn{
+    color: white;
+      background: black;
+      padding: 7px 6px;
+      cursor: pointer;
+      border-radius: 6px;
+      font-size: 12px;
+      margin-bottom: 9px; 
+  }
