Added Some Responsiveness to the application

--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -6,3 +6,11 @@
 .center{
     text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+  
+    .container{
+        margin:40px auto;
+        max-width: 90vw; 
+    }
+}
