--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -156,3 +156,13 @@
   margin: 16px 0;
     margin-top: 3px;
 }
+
+
+@media only screen and (max-width: 600px) {
+  
+  .mainnav ul li{
+    margin: 0 6px;
+      list-style: none;
+      font-weight: bold;
+   
+}}
